package com.linbit.drbdmanage.api;

public final class ApiConsts
{
    public static final String KEY_UUID              = "Uuid";

    public static final String API_REPLY             = "Reply";

    public static final String API_CRT_NODE          = "CrtNode";
    public static final String API_CRT_RSC           = "CrtRsc";
    public static final String API_CRT_RSC_DFN       = "CrtRscDfn";
    public static final String API_CRT_NET_IF        = "CrtNetIf";
    public static final String API_CRT_VLM_DFN       = "CrtVlmDfn";
    public static final String API_CRT_SNPSHT        = "CrtSnpsht";
    public static final String API_CRT_STOR_POOL_DFN = "CrtStorPoolDfn";
    public static final String API_CRT_STOR_POOL     = "CrtStorPool";
    public static final String API_CRT_NODE_CONN     = "CrtNodeConn";
    public static final String API_CRT_RSC_CONN      = "CrtRscConn";
    public static final String API_CRT_VLM_CONN      = "CrtVlmConn";
    public static final String API_MFY_NODE          = "MfyNode";
    public static final String API_MFY_RSC           = "MfyRsc";
    public static final String API_MFY_RSC_DFN       = "MfyRscDfn";
    public static final String API_MFY_NET_IF        = "MfyNetIf";
    public static final String API_MFY_VLM_DFN       = "MfyVlmDfn";
    public static final String API_MFY_SNPSHT        = "MfySnpsht";
    public static final String API_DEL_NODE          = "DelNode";
    public static final String API_DEL_RSC           = "DelRsc";
    public static final String API_DEL_RSC_DFN       = "DelRscDfn";
    public static final String API_DEL_NET_IF        = "DelNetIf";
    public static final String API_DEL_VLM_DFN       = "DelVlmDfn";
    public static final String API_DEL_STOR_POOL_DFN = "DelStorPoolDfn";
    public static final String API_DEL_STOR_POOL     = "DelStorPool";
    public static final String API_DEL_NODE_CONN     = "DelNodeConn";
    public static final String API_DEL_RSC_CONN      = "DelRscConn";
    public static final String API_DEL_VLM_CONN      = "DelVlmConn";
    public static final String API_DEL_SNPSHT        = "DelSnpsht";
    public static final String API_RST_SNPSHT        = "RstSnpsht";
    public static final String API_AUTO_DPLY_RSC     = "AutoDplyRsc";
    public static final String API_LOST_NODE         = "LostNode";
    public static final String API_CHK_STATE         = "ChkState";
    public static final String API_SIGN_IN           = "SignIn";
    public static final String API_CRT_DBG_CNSL      = "CrtDbgCnsl";
    public static final String API_DSTR_DBG_CNSL     = "DstrDbgCnsl";

    public static final String API_LST_NODE          = "LstNode";
    public static final String API_LST_RSC           = "LstRsc";
    public static final String API_LST_RSC_DFN       = "LstRscDfn";
    public static final String API_LST_NET_IF        = "LstNetIf";
    public static final String API_LST_VLM_DFN       = "LstVlmDfn";
    public static final String API_LST_VLM           = "LstVlm";
    public static final String API_LST_SNPSHT        = "LstSnpsht";
    public static final String API_LST_STOR_POOL     = "LstStorPool";

    public static final String API_CRT_SUBSCR        = "CrtSubscr";
    public static final String API_DEL_SUBSCR        = "DelSubscr";

    public static final String API_RPT_SPC           = "RptSpc";

    public static final String API_PING              = "Ping";
    public static final String API_PONG              = "Pong";

    public static final String API_MOD_INF           = "ModInf";
    public static final String API_VSN_INF           = "VsnInf";

    public static final String API_SET_CFG_VAL       = "SetCfgVal";
    public static final String API_DEL_CFG_VAL       = "DelCfgVal";
    public static final String API_LST_CFG_VAL       = "LstCfgVal";

    public static final String API_SHTDWN            = "Shtdwn";

    public static final String KEY_NODE              = "Node";
    public static final String KEY_RSC_DFN           = "RscDfn";
    public static final String KEY_STOR_POOL_DFN     = "StorPoolDfn";
    public static final String KEY_1ST_NODE          = "FirstNode";
    public static final String KEY_2ND_NODE          = "SecondNode";

    public static final String KEY_NODE_NAME         = "NodeName";
    public static final String KEY_NODE_TYPE         = "NodeType";
    public static final String KEY_NODE_FLAGS        = "NodeFlags";
    public static final String KEY_NODE_ID           = "NodeId";
    public static final String KEY_1ST_NODE_NAME     = "FirstNodeName";
    public static final String KEY_2ND_NODE_NAME     = "SecondNodeName";
    public static final String KEY_RSC_NAME          = "RscName";
    public static final String KEY_STOR_POOL_NAME    = "StorPoolName";
    public static final String KEY_NET_IF_NAME       = "NetIfName";
    public static final String KEY_SNPSHT_NAME       = "SnpshtName";
    public static final String KEY_VLM_NR            = "VlmNr";
    public static final String KEY_VLM_SIZE          = "VlmSize";
    public static final String KEY_MINOR_NR          = "MinorNr";
    public static final String KEY_PEER_COUNT        = "PeerCount";
    public static final String KEY_AL_SIZE           = "AlSize";
    public static final String KEY_AL_STRIPES        = "AlStripes";
    public static final String KEY_ID                = "Id";
    public static final String KEY_ROLE              = "Role";

    public static final String NAMESPC_NETCOM        = "NetCom";
    public static final String NAMESPC_DFLT          = "Default";
    public static final String NAMESPC_LOGGING       = "Logging";
    public static final String NAMESPC_ALLOC         = "Allocation";
    public static final String NAMESPC_NETIF         = "NetIf";

    public static final String KEY_PORT_NR           = "PortNr";
    public static final String KEY_IP_ADDR           = "IpAddr";
    public static final String KEY_BIND_ADDR         = "BindAddr";
    public static final String KEY_NETCOM_TYPE       = "NetComType";
    public static final String KEY_KEYSTORE          = "Keystore";
    public static final String KEY_TRUSTSTORE        = "Truststore";
    public static final String KEY_KEY_PWD           = "KeyPwd";
    public static final String KEY_KEYSTORE_PWD      = "KeystorePwd";
    public static final String KEY_TRUSTSTORE_PWD    = "TruststorePwd";
    public static final String KEY_SSL_PROTO         = "SslProto";

    public static final String VAL_NETCOM_TYPE_SSL      = "Ssl";
    public static final String VAL_NETCOM_TYPE_PLAIN    = "Plain";
    public static final String VAL_SSL_PROTO_TLSv1      = "TLSv1";

    public static final String VAL_NODE_TYPE_CTRL       = "Controller";
    public static final String VAL_NODE_TYPE_STLT       = "Satellite";
    public static final String VAL_NODE_TYPE_CMBD       = "Combined";
    public static final String VAL_NODE_TYPE_AUX        = "Auxiliary";

    public static final String KEY_SEC_IDENTITY         = "SecIdentity";
    public static final String KEY_SEC_ROLE             = "SecRole";
    public static final String KEY_SEC_TYPE             = "SecType";
    public static final String KEY_SEC_DOMAIN           = "SecDomain";
    public static final String KEY_SEC_PASSWORD         = "SecPassword";

    public static final int DM_DFLT_SERVER_PORT_SSL     = 6996;
    public static final int DM_DFLT_SERVER_PORT_PLAIN   = 6995;


}
